--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@vercel/analytics": "^1.1.1"
+	}
 }
