--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.1.1"
+		"@vercel/analytics": "^1.1.1",
+		"@vercel/speed-insights": "^1.0.2"
 	}
 }
